[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/settings_title.png" type="Texture" id=1]
[ext_resource path="res://assets/images/title_screen_button.png" type="Texture" id=2]
[ext_resource path="res://assets/images/white_tile.png" type="Texture" id=3]
[ext_resource path="res://src/SettingsPage.gd" type="Script" id=4]
[ext_resource path="res://assets/font/HachiMaruPop-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="AnimatedTexture" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="SettingsPage" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteBackground" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 20.35, 10.5931 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 484.733, 112.006 )
scale = Vector2( 0.438908, 0.382217 )
texture = ExtResource( 1 )

[node name="TitleScreenButtonImage" type="Sprite" parent="."]
position = Vector2( 197.372, 470.814 )
scale = Vector2( 0.309323, 0.323296 )
texture = ExtResource( 2 )

[node name="BackButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 166.978
margin_top = 405.057
margin_right = 179.978
margin_bottom = 425.057
rect_scale = Vector2( 4.7808, 6.47399 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicCheckbox" type="CheckBox" parent="."]
margin_left = 416.674
margin_top = 246.715
margin_right = 497.674
margin_bottom = 278.715
rect_scale = Vector2( 1.29991, 1.45215 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Music"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxCheckbox" type="CheckBox" parent="."]
margin_left = 416.674
margin_top = 317.988
margin_right = 497.674
margin_bottom = 349.988
rect_scale = Vector2( 1.29161, 1.4905 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "SFX"
flat = true
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MusicCheckbox" to="." method="_on_MusicCheckbox_pressed"]
[connection signal="pressed" from="SfxCheckbox" to="." method="_on_SfxCheckbox_pressed"]
